examples/compiler_errors/header_counts/WarningOnly.flx
// skip: support or non-error companion fixture for compiler diagnostics

module WarningOnly {
    type MaybeInt = SomeInt(Int) | NoneInt
}
